Update png names

--- a/index.html
+++ b/index.html
@@ -320,10 +320,9 @@ Map.addLayer(croplandMap, classVis, 'Presto Embeddings Based Cropland');
                 Green represents crops and yellow is everything else. The displayed maps are:
                 <ol>
                     <li>a cropland map derived from the WorldCover land cover map,</li>
-                    <li>the GLAD cropland map.</li>
+                    <li>the GLAD cropland map,</li>
                     <li>the Presto embedding-based cropland map,</li>
-                    <li>the DeepMind embedding-based cropland map,</li>
-                    
+                    <li>the DeepMind embedding-based cropland map.</li>
                 </ol>
             </p>
             <div class='click-zoom width4'> 
