--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ Map.addLayer(croplandMap, classVis, 'Presto Embeddings Based Cropland');
             <div class='click-zoom' style="width: 10em; margin-left: 20em"> 
                 <label>
                     <input type='checkbox' />
-                        <img src="assets/Togo_cropland_presto.png" alt="Togo Cropland"  style="width: 100%;">
+                        <img src="assets/Togo_cropland_Presto.png" alt="Togo Cropland"  style="width: 100%;">
                 </label>
             </div> 
             
@@ -344,7 +344,7 @@ Map.addLayer(croplandMap, classVis, 'Presto Embeddings Based Cropland');
             <div class='click-zoom width4'> 
                 <label>
                     <input type='checkbox' />
-                    <img src='assets/Togo_cropland_presto.png' alt='Togo Cropland Presto'>
+                    <img src='assets/Togo_cropland_Presto.png' alt='Togo Cropland Presto'>
                 </label>
                 <p class="textRight800">3. Presto<br>Embeddings</p>
             </div> 
@@ -489,6 +489,7 @@ Map.addLayer(croplandMap, classVis, 'Presto Embeddings Based Cropland');
                     <td>0.745</td>
                 </tr>
             </table>
+            <p>Script for assessment: <a href="https://code.earthengine.google.com/52d99816df0fc7b2cda3648cf7f708d5">6_Togo_cropland_embeddings_metrics</a></p>
 
             <h4>Concluding Thoughts</h4>
             <p>
