--- a/index.html
+++ b/index.html
@@ -448,8 +448,7 @@ Map.addLayer(croplandMap, classVis, 'Presto Embeddings Based Cropland');
             <p>
                 To get a more comprehensive understanding of the map quality 
                 we conducted an accuracy assessment using the Togo test set from CropHarvest.
-                It's important to note that CropHarvest was used as part of the finetuning for
-                Presto and therefore a slight bias exists.
+                It's important to note that Presto was benchmarked against CropHarvest.
             </p>
 
             <table style="text-align: center;">
