--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p>
             Geospatial embeddings offer a novel, efficient, and accessible way to map landscape features.
             <br> 
-            In part 1 of this blog post, we show how to generate geospatial embeddings using Presto.
+            In part 1 of this blog post, we show how to generate embeddings using a geospatial foundation model (Presto).
             <br>
             In part 2 we show that geospatial embeddings can be used to map cropland with high accuracy.
             <br><br>
